--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,6 +32,8 @@ jobs:
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
+    outputs:
+      image_version: ${{ steps.meta.outputs.version }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -58,7 +60,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
   scan:
     needs: build-and-push
     runs-on: ubuntu-latest
@@ -66,7 +67,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo-app:${{steps.meta.outputs.version}}'
+          image-ref: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo-app:${{ needs.build-and-push.outputs.image_version }}
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
